trunk/Archive2/68/85450e9881e28f/output
main.cpp: In function ‘auto init_tuple(T&&, std::index_sequence<I ...>)’:
main.cpp:16:31: error: expansion pattern ‘t’ contains no argument packs
         return init_tuple((t) ...);
                               ^
